--- a/CostcoProject/AndroidManifest.xml
+++ b/CostcoProject/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -28,7 +30,11 @@
         </activity>
         <activity
             android:name="com.edu.telescopio.StoreDetailActivity"
-            android:label="@string/title_activity_store_detail" >
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.edu.telescopio.StoreImageActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
